fixed nav jump, added files for service workers

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -27,7 +27,7 @@ header {
         }
     }
 
-    menu {
+    nav {
         display: flex;
         justify-content: flex-end;
         align-items: center;
@@ -41,15 +41,15 @@ header {
         }
 
         @media screen and (max-width: 960px){
-            transform: translateY(-150%);
+            position: relative;
+            display: flex;
+            justify-content: space-around;
+            top: -4rem;
             transition: transform var(--time) ease-in;
+            transform: translateY(-150%);
 
             &.open {
-                position: relative;
-                display: flex;
-                justify-content: space-around;
                 transform: translateY(0);
-                top: -4rem;
             }
         }
     }
